Fix code observations